logs/dag_id=spaceX_project/run_id=manual__2024-07-09T172132.017578+0000/task_id=load_output/attempt=1.log
[2024-07-09T17:21:42.414+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-09T17:21:42.522+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spaceX_project.load_output manual__2024-07-09T17:21:32.017578+00:00 [queued]>
[2024-07-09T17:21:42.596+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spaceX_project.load_output manual__2024-07-09T17:21:32.017578+00:00 [queued]>
[2024-07-09T17:21:42.599+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-07-09T17:21:42.653+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): load_output> on 2024-07-09 17:21:32.017578+00:00
[2024-07-09T17:21:42.703+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=375) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-09T17:21:42.726+0000] {standard_task_runner.py:63} INFO - Started process 384 to run task
[2024-07-09T17:21:42.749+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'spaceX_project', 'load_output', 'manual__2024-07-09T17:21:32.017578+00:00', '--job-id', '535', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmp7iok718v']
[2024-07-09T17:21:42.784+0000] {standard_task_runner.py:91} INFO - Job 535: Subtask load_output
[2024-07-09T17:21:43.171+0000] {task_command.py:426} INFO - Running <TaskInstance: spaceX_project.load_output manual__2024-07-09T17:21:32.017578+00:00 [running]> on host f565c82ff71d
[2024-07-09T17:21:43.795+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='rustam' AIRFLOW_CTX_DAG_ID='spaceX_project' AIRFLOW_CTX_TASK_ID='load_output' AIRFLOW_CTX_EXECUTION_DATE='2024-07-09T17:21:32.017578+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-09T17:21:32.017578+00:00'
[2024-07-09T17:21:43.800+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-09T17:21:43.840+0000] {sql.py:276} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS output(
                id INT PRIMARY_KEY,
                name TEXT,
                active BOOLEAN
            );
        
[2024-07-09T17:21:43.879+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-09T17:21:43.961+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-09T17:21:44.129+0000] {sql.py:487} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS output(
                id INT PRIMARY_KEY,
                name TEXT,
                active BOOLEAN
            );
        , parameters: None
[2024-07-09T17:21:44.194+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-09T17:21:44.196+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "PRIMARY_KEY"
LINE 3:                 id INT PRIMARY_KEY,
                               ^

[2024-07-09T17:21:44.341+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=spaceX_project, task_id=load_output, run_id=manual__2024-07-09T17:21:32.017578+00:00, execution_date=20240709T172132, start_date=20240709T172142, end_date=20240709T172144
[2024-07-09T17:21:44.426+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 535 for task load_output (syntax error at or near "PRIMARY_KEY"
LINE 3:                 id INT PRIMARY_KEY,
                               ^
; 384)
[2024-07-09T17:21:44.478+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-09T17:21:44.504+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-09T17:21:44.510+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
